# CoopCodeSpiking

./: main.ipynb  methods.py  pyproject.toml  readme.md  supplement.ipynb  supplement_poisson.ipynb  tools.py
parameters/: main_E.json  main_EI_nRF-11.json  main_EI_nRF-3.json  main_EI_nRF-5.json  main_EI_nRF-7.json  main_EI_nRF-9.json  main_E_nRF-1.json  main_E_nRF-11.json  main_E_nRF-3.json  main_E_nRF-5.json  main_E_nRF-7.json  main_E_nRF-9.json  supp_EI_nRF-1.json  supp_EI_nRF-11.json  supp_EI_nRF-13.json  supp_EI_nRF-15.json  supp_EI_nRF-3.json  supp_EI_nRF-5.json  supp_EI_nRF-7.json  supp_EI_nRF-9.json  supp_E_nRF-1.json  supp_E_nRF-11.json  supp_E_nRF-13.json  supp_E_nRF-15.json  supp_E_nRF-3.json  supp_E_nRF-5.json  supp_E_nRF-7.json  supp_E_nRF-9.json
settings/: matplotlib_my_rcParams.txt
